Tue Jul 29 01:39:40 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* init.scm: load newports.scm.

	* newports.scm: new file, excerpts from scsh's version modified
	for Guile.

	* scsh.scm: include stdio/stdport sync procedures.

Sat Jul 26 06:22:36 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* init.scm: load syntax-helpers.scm.

	* Makefile.am (scsh_DATA): add syntax-helpers.scm.
	* syntax-helpers.scm: new file from scsh 0.5.1.
	(name?): make it the same as symbol?

	* scsh.scm: define call-terminally.
	define with-env*, with-total-env*, with-cwd*, with-umask* and
	the macro versions.

	* syscalls.scm: redefine exit, pipe (ugh).
	Define cwd, set-umask.
	Include environment stuff, gives only alist->env and env->alist.

Fri Jul 18 07:31:03 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* init.scm: load re.scm.
	* re.scm: delete everything except regexp-num-submatches.

Wed Jul 16 14:40:40 1997  Jim Blandy  <jimb@floss.red-bean.com>

	* Makefile.am: Install SCSH files in $(datadir)/guile, not in the
	version-specific directory.  I think SCSH shouldn't be tied to a
	specific version of Guile.
	* Makefile.in: Regenerated.

Sun Jun 15 06:06:58 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* configure.in: change the version to 1.2a so it will install
	in the right place (maybe).

	* README: now it's a port of scsh 0.5.1.

	* init.scm: don't include re.scm until Guile's interface is stable.

	* match:start, match:end, match:substring updated from scsh 0.5.1.
	regexp-substitute, regexp-substitute/global, regexp-num-submatches:
	new from scsh 0.5.1.

	* syscalls.scm (%filter-C-strings!): moved from re.scm, following
	scsh 0.5.1.

	* utilities.scm: new version from scsh 0.5.1, adds string-replace!,
	substring-replace!, string-reduce.

	* time.scm: minor changes for scsh 0.4.4 -> 0.5.1

	* rw.scm: delete y-or-n? and *y-or-n-eof-count* which have moved
	in scsh 0.5.1 (to scsh.scm, but we don't need them).

Tue May 13 11:59:28 1997  Jim Blandy  <jimb@floss.cyclic.com>
