@@ -6,7 +6,7 @@ scshdir = $(datadir)/guile/scsh
 scsh_DATA = char-set.scm \
 	defrec.scm errno.scm fname.scm fr.scm \
 	init.scm let-opt.scm netconst.scm \
-	network.scm rdelim.scm re.scm receive.scm \
+	network.scm newports.scm rdelim.scm re.scm receive.scm \
 	rw.scm scsh.scm syntax.scm syntax-helpers.scm syscalls.scm \
 	time.scm utilities.scm
 
