@@ -1,5 +1,9 @@
 Tue Jul 29 01:39:40 1997  Gary Houston  <ghouston@actrix.gen.nz>
 
+	* Makefile.am (scsh_DATA): add newports.scm.
+
+	* scsh.scm (exit): defined here instead of in syscalls.scm.
+
 	* init.scm: load newports.scm.
 
 	* newports.scm: new file, excerpts from scsh's version modified
